WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
134833
REGRESSION (
r170163
?): Web content shifts revealing space equivalent to the find bar when clicking a link while a phrase is targeted via Cmd+F
https://bugs.webkit.org/show_bug.cgi?id=134833
Summary
REGRESSION (r170163?): Web content shifts revealing space equivalent to the f...
Antti Koivisto
Reported
2014-07-11 07:53:54 PDT
Revert
r170163
for Mac.
Attachments
patch
(2.18 KB, patch)
2014-07-11 08:01 PDT
,
Antti Koivisto
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Antti Koivisto
Comment 1
2014-07-11 08:01:55 PDT
Created
attachment 234764
[details]
patch
Antti Koivisto
Comment 2
2014-07-11 08:04:03 PDT
<
rdar://problem/17580021
>
WebKit Commit Bot
Comment 3
2014-07-11 09:29:54 PDT
Comment on
attachment 234764
[details]
patch Clearing flags on attachment: 234764 Committed
r171002
: <
http://trac.webkit.org/changeset/171002
>
WebKit Commit Bot
Comment 4
2014-07-11 09:29:56 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug