REGRESSION (r170163?): Web content shifts revealing space equivalent to the find bar when clicking a link while a phrase is targeted via Cmd+F https://bugs.webkit.org/show_bug.cgi?id=134833 <rdar://problem/17580021>

Reviewed by Zalan Bujtas.

Some versions of OS X Safari can't handle the new unfreeze timing. Revert back to DidFirstLayout on Mac.

* WebProcess/WebCoreSupport/WebFrameLoaderClient.cpp:
(WebKit::WebFrameLoaderClient::dispatchDidLayout):


Canonical link: https://commits.webkit.org/152782@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@171002 268f45cc-cd09-0410-ab3c-d52691b4dbfc